--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,80 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://101.34.207.75:3306/project_work?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: abc123456
+    password: my-secret-pw
+    druid:
+      # 连接池配置：大小，最小，最大
+      initial-size: 5
+      min-idle: 5
+      max-active: 20
+
+      # 连接等待超时时间
+      max-wait: 30000
+      # 配置检测可以关闭的空闲连接，间隔时间
+      time-between-eviction-runs-millis: 60000
+      # 配置连接在池中的最小生存时间
+      min-evictable-idle-time-millis: 300000
+      # 检测连接是否有，有效得select语句
+      validation-query: select '1' from dual
+      # 申请连接的时候检测，如果空闲时间大于time-between-eviction-runs-millis，执行validationQuery检测连接是否有效，建议配置为true，不影响性能，并且保证安全性。
+      test-while-idle: true
+      # 申请连接时执行validationQuery检测连接是否有效，建议设置为false，不然会会降低性能
+      test-on-borrow: false
+      # 归还连接时执行validationQuery检测连接是否有效，建议设置为false，不然会会降低性能
+      test-on-return: false
+
+
+      # 是否缓存preparedStatement，也就是PSCache  官方建议MySQL下建议关闭   个人建议如果想用SQL防火墙 建议打开
+      # 打开PSCache，并且指定每个连接上PSCache的大小
+      pool-prepared-statements: true
+      max-open-prepared-statements: 20
+      max-pool-prepared-statement-per-connection-size: 20
+
+      # 配置监控统计拦截的filters, 去掉后监控界面sql无法统计, 'wall'用于防火墙防御sql注入，stat监控统计,logback日志
+      filters: stat,wall
+      # Spring监控AOP切入点，如x.y.z.service.*,配置多个英文逗号分隔
+      #aop-patterns: com.springboot.servie.*
+      # lowSqlMillis用来配置SQL慢的标准，执行时间超过slowSqlMillis的就是慢
+      connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+
+      # WebStatFilter监控配置
+      web-stat-filter:
+        enabled: true
+        # 添加过滤规则：那些访问拦截统计
+        url-pattern: /*
+        # 忽略过滤的格式：哪些不拦截，不统计
+        exclusions: '*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*'
+
+      # StatViewServlet配置（Druid监控后台的Servlet映射配置，因为SpringBoot项目没有web.xml所在在这里使用配置文件设置）
+      stat-view-servlet:
+        enabled: true
+        # 配置Servlet的访问路径：访问路径为/druid/**时，跳转到StatViewServlet，会自动转到Druid监控后台
+        url-pattern: /druid/*
+        # 是否能够重置数据
+        reset-enable: false
+        # 设置监控后台的访问账户及密码
+        login-username: xsge
+        login-password: xsge
+        # IP白名单：允许哪些主机访问，默认为“”任何主机
+        # allow: 127.0.0.1
+        # IP黑名单：禁止IP访问，（共同存在时，deny优先于allow）
+        # deny: 192.168.1.218
+
+      # 配置StatFilter
+      filter:
+        stat:
+        log-slow-sql: true
+
 
 mybatis:
   mapper-locations:
     - classpath:mapper/*.xml
+
+oss:
+  qiniu:
+    domain: r1y3bddb4.hd-bkt.clouddn.com # 访问域名(默认使用七牛云测试域名)
+    accessKey: CHHM_D6uZB-wNB-T7hUWTVA75SUkUuM47u2v2OF5 # 公钥
+    secretKey: 5-J_d1GyWhFua2yCdOfc_Uf0ewqmGcM_aHET2ywU # 私钥
+    bucketName: jojo00 #存储空间名称
